# Resume-Parser

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  script.md
.streamlit/: config.toml
analyzers/: __init__.py  claim_validator.py  consistency_checker.py  github_analyzer.py  leetcode_analyzer.py  skill_ontology.py  timeline_analyzer.py
extractors/: email_generator.py  llm_extractor.py  regex_extractor.py
parsers/: __init__.py  docx_parser.py  pdf_parser.py
scoring/: __init__.py  ats_scorer.py  embedding_matcher.py  level_router.py
ui/: components.py  sidebar.py  tab_compare.py  tab_jd.py  tab_logs.py  tab_obs.py  tab_rankings.py  tab_recruiter.py  tab_upload.py  utils.py
utils/: langfuse_tracker.py  logger.py
